Tue Jul 10 10:20:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * tao/AnyTypeCode/TypeCode_CDR_Extraction.cpp

          Bug fix for Bugzilla 2918 and 2982. Second and subsequent indirect
          typecodes are not duplicated. (tao527 and tao536).

Mon Jul  9 15:40:40 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * configure.ac:
        * orbsvcs/examples/CosEC/RtEC_Based/tests/Multiple/CosEC_RtEC_Based_Mult.mpc:
        * orbsvcs/tests/Event/Basic/Event_Basic.mpc:
        * tests/CSD_Strategy_Tests/TP_Test_Dynamic/CSD_TP_Test_Dynamic.mpc:
        * tests/DLL_ORB/DLL_ORB.mpc:
        * tests/ORB_Local_Config/Two_DLL_ORB/Two_DLL_ORB.mpc:
        * tests/Object_Loader/Object_Loader.mpc:

          Updates to correct automake warnings and errors. These changes
          resolve bug 2954.

        * Makefile.am:
        * docs/tutorials/Quoter/RTCORBA/Makefile.am:
        * docs/tutorials/Quoter/idl/Makefile.am:
        * examples/AMH/Sink_Server/Makefile.am:
        * examples/AMI/FL_Callback/Makefile.am:
        * examples/CSD_Strategy/ThreadPool4/Makefile.am:
        * examples/Kokyu_dsrt_schedulers/Makefile.am:
        * examples/Kokyu_dsrt_schedulers/fp_example/Makefile.am:
        * examples/Kokyu_dsrt_schedulers/mif_example/Makefile.am:
        * examples/Kokyu_dsrt_schedulers/muf_example/Makefile.am:
        * examples/Load_Balancing/Makefile.am:
        * examples/Makefile.am:
        * examples/POA/Generic_Servant/Makefile.am:
        * examples/PluggableUDP/Makefile.am:
        * examples/PluggableUDP/tests/Performance/Makefile.am:
        * examples/PluggableUDP/tests/SimplePerformance/Makefile.am:
        * examples/RTScheduling/Makefile.am:
        * examples/Simple/time-date/Makefile.am:
        * orbsvcs/ImplRepo_Service/Makefile.am:
        * orbsvcs/LifeCycle_Service/Makefile.am:
        * orbsvcs/Makefile.am:
        * orbsvcs/Naming_Service/Makefile.am:
        * orbsvcs/examples/CosEC/RtEC_Based/Makefile.am: