@@ -46,6 +46,7 @@ TAO_END_VERSIONED_NAMESPACE_DECL
 
 #define TAO_RTCORBA_SAFE_INCLUDE
 #include "tao/RTCORBA/RTCORBAC.h"
+#include "tao/RTCORBA/RT_ProtocolPropertiesC.h"
 #undef TAO_RTCORBA_SAFE_INCLUDE
 
 #include "tao/RTCORBA/rtcorba_typedefs.h"
