@@ -33,6 +33,9 @@
 
 #include /**/ "ace/pre.h"
 
+#ifndef TAO_RTCORBA_SAFE_INCLUDE
+#error You should not include RTCORBA/RT_ProtocolPropertiesC.h, use tao/RTCORBA/RTCORBA.h
+#endif /* TAO_RTCORBA_SAFE_INCLUDE */
 
 #include /**/ "ace/config-all.h"
 
@@ -41,38 +44,41 @@
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
 #include /**/ "tao/RTCORBA/rtcorba_export.h"
-#include "tao/SystemException.h"
 #include "tao/Basic_Types.h"
-#include "tao/ORB_Constants.h"
 #include "tao/Object.h"
 #include "tao/Objref_VarOut_T.h"
+#include /**/ "tao/Versioned_Namespace.h"
 
 #if defined (TAO_EXPORT_MACRO)
 #undef TAO_EXPORT_MACRO
 #endif
 #define TAO_EXPORT_MACRO TAO_RTCORBA_Export
 
+TAO_BEGIN_VERSIONED_NAMESPACE_DECL
+
+
+
 // TAO_IDL - Generated from
 // be\be_visitor_module/module_ch.cpp:49
 
 namespace RTCORBA
 {
-
+  
   // TAO_IDL - Generated from
   // be\be_interface.cpp:638
 
 #if !defined (_RTCORBA_PROTOCOLPROPERTIES__VAR_OUT_CH_)
 #define _RTCORBA_PROTOCOLPROPERTIES__VAR_OUT_CH_
-
+  
   class ProtocolProperties;
   typedef ProtocolProperties *ProtocolProperties_ptr;
-
+  
   typedef
     TAO_Objref_Var_T<
         ProtocolProperties
       >
     ProtocolProperties_var;
-
+  
   typedef
     TAO_Objref_Out_T<
         ProtocolProperties
@@ -80,13 +86,13 @@ namespace RTCORBA
     ProtocolProperties_out;
 
 #endif /* end #if !defined */
-
+  
   // TAO_IDL - Generated from
   // be\be_visitor_interface/interface_ch.cpp:54
 
 #if !defined (_RTCORBA_PROTOCOLPROPERTIES_CH_)
 #define _RTCORBA_PROTOCOLPROPERTIES_CH_
-
+  
   class TAO_RTCORBA_Export ProtocolProperties
     : public virtual ::CORBA::Object
   {
@@ -94,24 +100,24 @@ namespace RTCORBA
     typedef ProtocolProperties_ptr _ptr_type;
     typedef ProtocolProperties_var _var_type;
     typedef ProtocolProperties_out _out_type;
-
+    
     // The static operations.
     static ProtocolProperties_ptr _duplicate (ProtocolProperties_ptr obj);
-
+    
     static void _tao_release (ProtocolProperties_ptr obj);
-
+    
     static ProtocolProperties_ptr _narrow (::CORBA::Object_ptr obj);
     static ProtocolProperties_ptr _unchecked_narrow (::CORBA::Object_ptr obj);
     static ProtocolProperties_ptr _nil (void)
     {
       return static_cast<ProtocolProperties_ptr> (0);
     }
-
+    
     static void _tao_any_destructor (void *);
-
+    
     // TAO_IDL - Generated from
     // be\be_visitor_interface/interface_ch.cpp:216
-
+    
     virtual ::CORBA::Boolean _is_a (const char *type_id);
     virtual const char* _interface_repository_id (void) const;
     virtual ::CORBA::Boolean marshal (TAO_OutputCDR &cdr);
@@ -123,13 +129,13 @@ namespace RTCORBA
   protected:
     // Abstract or local interface only.
     ProtocolProperties (void);
-
+    
     virtual ~ProtocolProperties (void);
-
+  
   private:
     // Private and unimplemented for concrete interfaces.
     ProtocolProperties (const ProtocolProperties &);
-
+    
     void operator= (const ProtocolProperties &);
   };
 
@@ -143,6 +149,10 @@ namespace RTCORBA
 // TAO_IDL - Generated from
 // be\be_visitor_traits.cpp:64
 
+
+TAO_END_VERSIONED_NAMESPACE_DECL
+
+
 TAO_BEGIN_VERSIONED_NAMESPACE_DECL
 
 // Traits specializations.
@@ -151,7 +161,7 @@ namespace TAO
 
 #if !defined (_RTCORBA_PROTOCOLPROPERTIES__TRAITS_)
 #define _RTCORBA_PROTOCOLPROPERTIES__TRAITS_
-
+  
   template<>
   struct TAO_RTCORBA_Export Objref_Traits< ::RTCORBA::ProtocolProperties>
   {
@@ -173,9 +183,17 @@ namespace TAO
 TAO_END_VERSIONED_NAMESPACE_DECL
 
 
+TAO_BEGIN_VERSIONED_NAMESPACE_DECL
+
+
+
 
 // TAO_IDL - Generated from
-// be\be_codegen.cpp:1138
+// be\be_codegen.cpp:1209
+
+
+TAO_END_VERSIONED_NAMESPACE_DECL
+
 #include /**/ "ace/post.h"
 
 #endif /* ifndef */
